<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_game"
            android:icon="@mipmap/ic_menu_game"
            android:title="@string/menu_game" />

        <item
            android:id="@+id/nav_triggers"
            android:icon="@mipmap/ic_menu_triggers"
            android:title="@string/menu_triggers" />

        <item
            android:id="@+id/nav_pool"
            android:icon="@mipmap/ic_menu_pool"
            android:title="@string/menu_pool" />

        <item
            android:id="@+id/nav_dice"
            android:icon="@mipmap/ic_menu_dice"
            android:title="@string/menu_dice" />

        <item
            android:id="@+id/nav_help"
            android:icon="@mipmap/ic_menu_help"
            android:title="@string/menu_help" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@mipmap/ic_menu_exit"
            android:title="@string/menu_exit" />
    </group>
</menu>
