<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_game">

    <fragment
        android:id="@+id/nav_game"
        android:name="com.example.crearpartida.game.GameFragment"
        android:label="@string/menu_game"
        tools:layout="@layout/fragment_game" />

    <fragment
        android:id="@+id/nav_triggers"
        android:name="com.example.crearpartida.triggers.TriggersFragment"
        android:label="@string/menu_triggers"
        tools:layout="@layout/fragment_triggers" />

    <fragment
        android:id="@+id/nav_pool"
        android:name="com.example.crearpartida.pool.PoolFragment"
        android:label="@string/menu_pool"
        tools:layout="@layout/fragment_pool" />

    <fragment
        android:id="@+id/nav_dice"
        android:name="com.example.crearpartida.dice.DiceFragment"
        android:label="@string/menu_dice"
        tools:layout="@layout/fragment_dice" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.crearpartida.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_exit"
        android:name="com.example.crearpartida.exit.ExitFragment"
        android:label="@string/menu_exit"

        tools:layout="@layout/fragment_exit" />
</navigation>