<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <TextView
        android:id="@+id/tvTitolAvis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/crearAvis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitolAvis"
        app:layout_constraintVertical_bias="0.0">
        
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nomAvis"
                android:padding="8dp"/>
            
            <EditText
                android:id="@+id/etNomAvis"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </TableRow>
        
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descrip"
                android:padding="8dp"/>
            
            <EditText
                android:id="@+id/etDescAvis"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="text"/>
        </TableRow>
    
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quan"
                android:padding="8dp"/>
            
            <Spinner
                android:id="@+id/sQuan"
                android:layout_height="wrap_content"
                android:isScrollContainer="false"
                android:textAlignment="center"/>
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>