<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearPartida"
    android:orientation="horizontal">

    <Button
        android:id="@+id/bvida20"
        android:layout_width="64dp"
        android:layout_height="45dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="63dp"
        android:text="@string/vida20"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/bback"
        app:layout_constraintEnd_toStartOf="@+id/bvida30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vida" />

    <Button
        android:id="@+id/bvida40"
        android:layout_width="64dp"
        android:layout_height="45dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="63dp"
        android:text="@string/vida40"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/bstart"
        app:layout_constraintStart_toEndOf="@+id/bvida30"
        app:layout_constraintTop_toBottomOf="@+id/vida"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bvida30"
        android:layout_width="64dp"
        android:layout_height="45dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="63dp"
        android:text="@string/vida30"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/bback"
        app:layout_constraintStart_toEndOf="@+id/bvida20"
        app:layout_constraintTop_toBottomOf="@+id/vida" />

    <TextView
        android:id="@+id/CrearPartida"
        android:layout_width="172dp"
        android:layout_height="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="30dp"
        android:text="@string/crear_p"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/sFormat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/sFormat"
        android:layout_width="190dp"
        android:layout_height="33dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="539dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CrearPartida"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/sJugadors"
        android:layout_width="191dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="26dp"
        android:text="@string/jugadors"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/sJugadors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sFormat"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/vida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="40dp"
        android:text="@string/vida"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/bvida20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sJugadors" />

    <Button
        android:id="@+id/bstart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="85dp"
        android:layout_marginRight="85dp"
        android:text="@string/Start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bback"
        app:layout_constraintTop_toBottomOf="@+id/bvida40" />

    <Button
        android:id="@+id/bback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/back_p"
        app:layout_constraintEnd_toStartOf="@+id/bstart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bvida20" />

    <EditText
        android:id="@+id/eCustomVida"
        android:layout_width="104dp"
        android:layout_height="44dp"
        android:layout_marginTop="75dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@+id/bvida40"
        app:layout_constraintTop_toBottomOf="@+id/sJugadors" />

</androidx.constraintlayout.widget.ConstraintLayout>