<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Avisos">
    
    <TextView
        android:id="@+id/textViewAvis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/avis"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    
    <TextView
        android:id = "@+id/textView3"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginStart = "16dp"
        android:layout_marginTop = "16dp"
        android:text = "@string/avisFinal"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toEndOf = "@+id/divider"
        app:layout_constraintTop_toBottomOf = "@+id/textViewAvis" />
    
    <TextView
        android:id = "@+id/textView4"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginTop = "16dp"
        android:text = "@string/avisPrincipi"
        app:layout_constraintEnd_toStartOf = "@+id/divider"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toBottomOf = "@+id/textViewAvis">
    
    </TextView>
    
    <Space
        android:id = "@+id/espai"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        app:layout_constraintBottom_toBottomOf = "parent"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintTop_toBottomOf = "@+id/textViewAvis" />
    
    
    <TextView
        android:id = "@+id/textView"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginStart = "32dp"
        android:layout_marginTop = "8dp"
        android:text = "@string/titolParametresAvis"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toBottomOf = "@+id/textView4" />
    
    <ScrollView
        android:id = "@+id/scrollView3"
        android:layout_width = "300dp"
        android:layout_height = "175dp"
        android:layout_marginStart = "32dp"
        android:layout_marginTop = "8dp"
        android:layout_marginEnd = "16dp"
        app:layout_constraintEnd_toStartOf = "@+id/divider"
        app:layout_constraintHorizontal_bias = "0.0"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toBottomOf = "@+id/textView">
        
        <TableLayout
            android:id = "@+id/tlSv1"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content" />
    </ScrollView>
    
    <ScrollView
        android:id = "@+id/scrollView2"
        android:layout_width = "300dp"
        android:layout_height = "175dp"
        android:layout_marginStart = "24dp"
        android:layout_marginTop = "8dp"
        android:layout_marginEnd = "24dp"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintHorizontal_bias = "0.466"
        app:layout_constraintStart_toEndOf = "@+id/divider"
        app:layout_constraintTop_toBottomOf = "@+id/textView2">
        
        <TableLayout
            android:id = "@+id/tlSv2"
            android:layout_width = "match_parent"
            android:layout_height = "wrap_content" />
    </ScrollView>
    
    <Button
        android:id="@+id/bAvisBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="48dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
    
    <Button
        android:id = "@+id/bAvisCrear"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginBottom = "48dp"
        android:text = "@string/crear"
        app:layout_constraintBottom_toBottomOf = "parent"
        app:layout_constraintEnd_toEndOf = "@+id/scrollView3"
        app:layout_constraintHorizontal_bias = "1.0"
        app:layout_constraintStart_toEndOf = "@+id/bAvisBack"
        app:layout_constraintTop_toTopOf = "parent"
        app:layout_constraintVertical_bias = "1.0" />
    
    <Button
        android:id = "@+id/bAvisEliminar"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginBottom = "48dp"
        android:text = "@string/eliminar"
        app:layout_constraintBottom_toBottomOf = "parent"
        app:layout_constraintStart_toStartOf = "@+id/scrollView2"
        app:layout_constraintTop_toTopOf = "parent"
        app:layout_constraintVertical_bias = "1.0" />
    
    <TextView
        android:id = "@+id/textView2"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginStart = "36dp"
        android:layout_marginTop = "8dp"
        android:text = "@string/titolParametresAvis"
        app:layout_constraintStart_toEndOf = "@+id/divider"
        app:layout_constraintTop_toBottomOf = "@+id/textView3" />
    
    <View
        android:id = "@+id/divider"
        android:layout_width = "4dp"
        android:layout_height = "402dp"
        android:layout_marginTop = "1dp"
        android:background = "?android:attr/listDivider"
        android:visibility = "invisible"
        app:layout_constraintBottom_toBottomOf = "parent"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toTopOf = "parent" />


</androidx.constraintlayout.widget.ConstraintLayout>